# d2021/docs/swagger.yaml
@@ -1,25 +1,13 @@
 basePath: /path
 definitions:
-  data.Courses:
+  d2021.CoursesConv:
     properties:
-      idCourse:
-        type: integer
-      status:
-        type: string
       title:
         type: string
     type: object
-  data.EmployeeCourses:
+  handler.errorResponse:
     properties:
-      course:
-        items:
-          $ref: '#/definitions/data.Courses'
-        type: array
-      firstName:
-        type: string
-      idEmployee:
-        type: integer
-      lastName:
+      message:
         type: string
     type: object
 host: localhost:8001
@@ -29,40 +17,6 @@ info:
   title: HRM API
   version: "1.0"
 paths:
-  /employee/{idEmployee}:
-    get:
-      consumes:
-      - application/json
-      description: Get technology skill
-      operationId: get-technologies
-      parameters:
-      - description: Employee ID
-        in: path
-        name: idEmployee
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/data.EmployeeCourses'
-        "400":
-          description: Bad request
-          schema:
-            type: string
-        "404":
-          description: Bad request
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: GetSkills
-      tags:
-      - Technologies
   /employee/course:
     post:
       consumes:
@@ -70,134 +24,141 @@ paths:
       description: Start taking the course assigned to the employee
       operationId: post-course-to-start
       parameters:
-      - description: Employee courses
+      - description: Employee course
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/data.EmployeeCourses'
+          $ref: '#/definitions/d2021.CoursesConv'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/data.EmployeeCourses'
         "400":
-          description: Bad request
+          description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "404":
-          description: Bad request
+          description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: ' Internal Server Error'
+          description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: PostEmployeeCourses
       tags:
       - Course
-  /finished/{idEmployee}:
+  /finished:
     get:
       consumes:
       - application/json
       description: Get finished by employee courses
       operationId: get-finished-course
-      parameters:
-      - description: Employee ID
-        in: path
-        name: idEmployee
-        required: true
-        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/data.EmployeeCourses'
+            $ref: '#/definitions/d2021.CoursesConv'
         "400":
-          description: Bad request
+          description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "404":
-          description: Bad request
+          description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: ' Internal Server Error'
+          description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: GetFinishedCourses
       tags:
       - Course
-  /progress/{idEmployee}:
+  /progress:
     get:
       consumes:
       - application/json
       description: Get started by employee courses
       operationId: get-started-course
-      parameters:
-      - description: Employee ID
-        in: path
-        name: idEmployee
-        required: true
-        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/data.EmployeeCourses'
+            $ref: '#/definitions/d2021.CoursesConv'
         "400":
-          description: Bad request
+          description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "404":
-          description: Bad request
+          description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: ' Internal Server Error'
+          description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: GetStartedCourses
       tags:
       - Course
-  /suggested/{idEmployee}:
+  /suggested:
     get:
       consumes:
       - application/json
       description: Get suggested courses for employee
       operationId: get-suggested-course
-      parameters:
-      - description: Employee ID
-        in: path
-        name: idEmployee
-        required: true
-        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/data.EmployeeCourses'
+            $ref: '#/definitions/d2021.CoursesConv'
         "400":
-          description: Bad request
+          description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "404":
-          description: Bad request
+          description: Not Found
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: ' Internal Server Error'
+          description: Internal Server Error
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: GetCourse
       tags:
       - Course
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
